# rv32m1_sdk_riscv

./: LA_OPT_NXP_Software_License.htm  LA_OPT_WOLFSSL_EVAL.htm  README.md  SW-Content-Register.txt
boards/rv32m1_vega/demo_apps/bubble/ri5cy/riscveclipse/: .cproject
boards/rv32m1_vega/demo_apps/bubble/zero_riscy/riscveclipse/: .cproject
boards/rv32m1_vega/demo_apps/dcdc_framework/ri5cy/riscveclipse/: .cproject
boards/rv32m1_vega/demo_apps/flexio_pwm/ri5cy/riscveclipse/: .cproject
boards/rv32m1_vega/demo_apps/flexio_pwm/zero_riscy/riscveclipse/: .cproject
boards/rv32m1_vega/demo_apps/hello_world/ri5cy/riscveclipse/: .cproject
boards/rv32m1_vega/demo_apps/hello_world/ri5cy/riscvgcc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Makefile  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build_all.bat  build_log.txt  build_release.bat  cmake_install.cmake  hello_world.elf.vcxproj  hello_world.elf.vcxproj.filters  trace.txt
boards/rv32m1_vega/demo_apps/wifi_qca/qca_throughput/ri5cy/riscvgcc/: CMakeLists.txt
boards/rv32m1_vega/demo_apps/wolfssl/wolfssl_benchmark/: user_settings.h
boards/rv32m1_vega/driver_examples/sdcard/freertos/: event.c  fsl_host.c
boards/rv32m1_vega/driver_examples/sdcard/interrupt/: fsl_host.c
boards/rv32m1_vega/driver_examples/sdcard/polling/: fsl_host.c
boards/rv32m1_vega/driver_examples/sdcard_fatfs/: event.c  event.h
boards/rv32m1_vega/driver_examples/sdcard_fatfs/ri5cy/: readme.txt  sdcard_fatfs.c
boards/rv32m1_vega/driver_examples/sdcard_fatfs/zero_riscy/: sdcard_fatfs.c
boards/rv32m1_vega/multicore_examples/hello_world/ri5cy/: hello_world_core0.c
boards/rv32m1_vega/multicore_examples/hello_world/zero_riscy/: hello_world_core1.c  readme.txt
boards/rv32m1_vega/multicore_examples/multicore_manager/ri5cy/: mcmgr_core0.c  pin_mux.c  readme.txt
boards/rv32m1_vega/multicore_examples/multicore_manager/zero_riscy/: mcmgr_core1.c
boards/rv32m1_vega/multicore_examples/rpmsg_lite_pingpong/: rpmsg_config.h
boards/rv32m1_vega/multicore_examples/rpmsg_lite_pingpong/ri5cy/: main_core0.c  pin_mux.c  readme.txt
boards/rv32m1_vega/multicore_examples/rpmsg_lite_pingpong/zero_riscy/: main_core1.c
boards/rv32m1_vega/multicore_examples/rpmsg_lite_pingpong_rtos/: rpmsg_config.h
boards/rv32m1_vega/multicore_examples/rpmsg_lite_pingpong_rtos/ri5cy/: FreeRTOSConfig.h  main_core0.c  pin_mux.c  readme.txt
boards/rv32m1_vega/multicore_examples/rpmsg_lite_pingpong_rtos/zero_riscy/: FreeRTOSConfig.h  main_core1.c
boards/rv32m1_vega/rtos_examples/freertos_event/zero_riscy/: readme.txt
boards/rv32m1_vega/rtos_examples/freertos_generic/ri5cy/: FreeRTOSConfig.h
boards/rv32m1_vega/rtos_examples/freertos_generic/zero_riscy/: FreeRTOSConfig.h  readme.txt
boards/rv32m1_vega/rtos_examples/freertos_hello/ri5cy/: FreeRTOSConfig.h
boards/rv32m1_vega/rtos_examples/freertos_hello/zero_riscy/: readme.txt
boards/rv32m1_vega/rtos_examples/freertos_lpi2c/: pin_mux.c
boards/rv32m1_vega/rtos_examples/freertos_lpi2c/ri5cy/: freertos_lpi2c.c
boards/rv32m1_vega/rtos_examples/freertos_lpi2c/zero_riscy/: FreeRTOSConfig.h  freertos_lpi2c.c  readme.txt
boards/rv32m1_vega/rtos_examples/freertos_lpspi/ri5cy/: freertos_lpspi.c
boards/rv32m1_vega/rtos_examples/freertos_lpspi/zero_riscy/: FreeRTOSConfig.h  freertos_lpspi.c
boards/rv32m1_vega/rtos_examples/freertos_lpuart/ri5cy/: FreeRTOSConfig.h  freertos_lpuart.c  readme.txt
boards/rv32m1_vega/rtos_examples/freertos_lpuart/zero_riscy/: FreeRTOSConfig.h  freertos_lpuart.c
boards/rv32m1_vega/rtos_examples/freertos_mutex/ri5cy/: readme.txt
boards/rv32m1_vega/rtos_examples/freertos_queue/ri5cy/: FreeRTOSConfig.h  freertos_queue.c  readme.txt
boards/rv32m1_vega/rtos_examples/freertos_queue/zero_riscy/: FreeRTOSConfig.h
boards/rv32m1_vega/rtos_examples/freertos_sem/ri5cy/: FreeRTOSConfig.h
boards/rv32m1_vega/rtos_examples/freertos_sem/zero_riscy/: FreeRTOSConfig.h  readme.txt
boards/rv32m1_vega/rtos_examples/freertos_sem_static/ri5cy/: FreeRTOSConfig.h
boards/rv32m1_vega/rtos_examples/freertos_sem_static/zero_riscy/: FreeRTOSConfig.h  readme.txt
boards/rv32m1_vega/rtos_examples/freertos_swtimer/ri5cy/: FreeRTOSConfig.h  readme.txt
boards/rv32m1_vega/rtos_examples/freertos_swtimer/zero_riscy/: FreeRTOSConfig.h
boards/rv32m1_vega/rtos_examples/freertos_tickless/: pin_mux.c
boards/rv32m1_vega/rtos_examples/freertos_tickless/ri5cy/: FreeRTOSConfig.h  freertos_tickless.c  readme.txt
boards/rv32m1_vega/rtos_examples/freertos_tickless/zero_riscy/: FreeRTOSConfig.h  freertos_tickless.c
middleware/wireless/bluetooth_1.4.0/profiles/ancs/: ancs_interface.h
middleware/wireless/bluetooth_1.4.0/profiles/blood_pressure/: blood_pressure_interface.h  blood_pressure_service.c
middleware/wireless/bluetooth_1.4.0/profiles/cycling_power/: cycling_power_interface.h  cycling_power_service.c
middleware/wireless/bluetooth_1.4.0/profiles/cycling_speed_cadence/: cycling_speed_cadence_interface.h  cycling_speed_cadence_service.c
middleware/wireless/bluetooth_1.4.0/profiles/glucose/: glucose_interface.h  glucose_service.c
middleware/wireless/bluetooth_1.4.0/profiles/health_thermometer/: health_thermometer_interface.h  health_thermometer_service.c
middleware/wireless/bluetooth_1.4.0/profiles/otap/: otap_interface.h  otap_service.c
middleware/wireless/bluetooth_1.4.0/profiles/proximity/: immediate_alert_interface.h  immediate_alert_service.c  link_loss_interface.h  link_loss_service.c  tx_power_interface.h  tx_power_service.c
middleware/wireless/bluetooth_1.4.0/profiles/running_speed_cadence/: running_speed_cadence_interface.h  running_speed_cadence_service.c
middleware/wireless/bluetooth_1.4.0/profiles/time/: current_time_interface.h  current_time_service.c  next_dst_change_interface.h  next_dst_change_service.c  reference_time_update_interface.h  reference_time_update_service.c
middleware/wireless/framework_5.5.1/OtaSupport/Interface/: OtaSupport.h
middleware/wireless/framework_5.5.1/OtaSupport/Source/: OtaSupport.c
(+1001 files in other folders)
